<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:orca="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/login_splash"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_logo1_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/login_logo2_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/login_logo_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible" >

                <ImageView
                    android:id="@+id/login_logo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    />

                <ImageView
                    android:id="@+id/login_logo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_main_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:layout_weight="1.0"
                android:gravity="top|center"
                android:orientation="vertical"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip" >

                <RelativeLayout
                    android:id="@+id/user_display"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:visibility="gone" >

                    <ImageView
                        android:id="@+id/user_photo"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="2.0dip" />
                    <!-- orca:placeholderSrc="@drawable/orca_phone_unknown_contact" -->

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:layout_marginTop="2.0dip"
                        android:layout_toRightOf="@+id/user_photo"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="13.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/not_you_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_name"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:layout_toRightOf="@+id/user_photo"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="start_screen_sso_text_not_you_link"
                        android:textColor="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textSize="13.0sp" />
                </RelativeLayout>

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="42.0dip"
                    android:background="@drawable/text_rect"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:onClick="onClickNext"
                    android:paddingLeft="9.0dip"
                    android:paddingRight="9.0dip"
                    android:singleLine="true"
                     android:text="ishu.chaudhary@rampgreen.net"
                    whatever:customRegexp="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$"
                    whatever:emptyErrorString="@string/message_empty"
                    whatever:testErrorString="@string/invalid_email_message"
                    whatever:testType="regexp" />

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="42.0dip"
                    android:layout_marginBottom="17.0dip"
                    android:layout_marginTop="16.0dip"
                    android:background="@drawable/text_rect"
                    android:gravity="left|center"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:onClick="onClickNext"
                    android:padding="9.0dip"
                    android:paddingLeft="9.0dip"
                    android:paddingRight="9.0dip"
                    android:singleLine="true"
                    android:text="ishu"
                    whatever:emptyErrorString="@string/message_empty"
                    whatever:testType="nocheck" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_login"
                    android:gravity="center"
                    android:paddingBottom="0.0dip"
                    android:paddingTop="0.0dip"
                    android:text="@string/btn_login_txt"
                    android:textColor="@android:color/white"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/login_focus_holder"
                    android:layout_width="0.0dip"
                    android:layout_height="0.0dip"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/email"
                    android:nextFocusRight="@+id/email"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_bottom_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:paddingBottom="15.0dip"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip"
                    android:paddingTop="15.0dip"
                    android:text="login_screen_signup_button"
                    android:textColor="@android:color/white"
                    android:textSize="13.0sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>