<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:orca="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/login_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/login_main_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:layout_weight="1.0"
                android:gravity="top|center"
                android:orientation="vertical"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip" >

                <RelativeLayout
                    android:id="@+id/user_display"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:visibility="gone" >

                    <ImageView
                        android:id="@+id/user_photo"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="2.0dip" />
                    <!-- orca:placeholderSrc="@drawable/orca_phone_unknown_contact" -->

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:layout_marginTop="2.0dip"
                        android:layout_toRightOf="@+id/user_photo"
                        android:background="@drawable/text_rect"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="13.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/not_you_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_name"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:layout_toRightOf="@+id/user_photo"
                        android:background="@drawable/text_rect"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="start_screen_sso_text_not_you_link"
                        android:textColor="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textSize="13.0sp" />
                </RelativeLayout>

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/et_email"
                    android:layout_width="fill_parent"
                    android:layout_height="42.0dip"
                    android:layout_marginBottom="17.0dip"
                    android:background="@drawable/text_rect"
                    android:focusable="false"
                    android:gravity="left|center"
                    android:hint="Email"
                    android:inputType="textNoSuggestions|textEmailAddress"
                    android:paddingLeft="9.0dip"
                    android:paddingRight="9.0dip"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="14.0sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17.0dip"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <Spinner
                        android:id="@+id/spinner_salutation"
                        android:layout_width="70dp"
                        android:layout_height="42.0dip"
                        android:layout_marginTop="3.0dip"
                        android:gravity="left"
                        android:prompt="@string/select"
                        android:textColor="@android:color/black"
                        android:textSize="9.0sp" />

                    <com.andreabaccega.widget.FormEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="42.0dip"
                        android:background="@drawable/text_rect"
                        android:gravity="left"
                        android:hint="First name"
                        android:inputType="textPersonName"
                        android:onClick="onClickNext"
                        android:paddingLeft="9.0dip"
                        android:paddingRight="9.0dip"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="14.0sp"
                        whatever:emptyErrorString="@string/message_empty"
                        whatever:testType="nocheck" />
                </LinearLayout>

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/et_middle_name"
                    android:layout_width="fill_parent"
                    android:layout_height="42.0dip"
                    android:layout_marginBottom="17.0dip"
                    android:background="@drawable/text_rect"
                    android:gravity="left|center"
                    android:hint=""
                    android:inputType="textPersonName"
                    android:paddingLeft="9.0dip"
                    android:paddingRight="9.0dip"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="14.0sp"
                    android:visibility="gone"
                    whatever:emptyErrorString="@string/message_empty"
                    whatever:testType="nocheck" />

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="42.0dip"
                    android:layout_marginBottom="17.0dip"
                    android:background="@drawable/text_rect"
                    android:gravity="left|center"
                    android:hint="Alias"
                    android:inputType="textPersonName"
                    android:onClick="onClickNext"
                    android:paddingLeft="9.0dip"
                    android:paddingRight="9.0dip"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="14.0sp"
                    android:visibility="visible"
                    whatever:emptyErrorString="@string/message_empty"
                    whatever:testType="nocheck" />

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/et_password"
                    android:layout_width="fill_parent"
                    android:layout_height="42.0dip"
                    android:layout_marginBottom="17.0dip"
                    android:background="@drawable/text_rect"
                    android:gravity="left|center"
                    android:hint="Password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:onClick="onClickNext"
                    android:padding="9.0dip"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="14.0sp"
                    whatever:emptyErrorString="@string/message_empty"
                    whatever:testType="nocheck" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17.0dip" >

                    <RadioGroup
                        android:id="@+id/radioSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="45dp"
                            android:checked="true"
                            android:text="@string/radio_male" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="@dimen/between_gender_button_margin"
                            android:layout_toRightOf="@+id/radioSex"
                            android:text="@string/radio_female" />
                    </RadioGroup>
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_login"
                    android:gravity="center"
                    android:paddingBottom="0.0dip"
                    android:paddingTop="0.0dip"
                    android:text="Register"
                    android:textColor="@android:color/white"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/login_focus_holder"
                    android:layout_width="0.0dip"
                    android:layout_height="0.0dip"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/et_first_name"
                    android:nextFocusRight="@+id/et_first_name"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>